<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.proyectodam.javi.proyectodam.MainActivity">

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"
        android:onClick="historyAccess"
        android:padding="20dp"
        android:text="@string/btn_trip_"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/buttonVolcado"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        android:onClick="transferAccess"
        android:padding="20dp"
        android:text="@string/btn_transfer"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/instructions_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"
        android:padding="20dp"
        android:text="@string/main_activity_instructions"/>

</LinearLayout>